fix header on iphone

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -218,6 +218,9 @@
     }
     @include d(1200){
       top: 24px;
+      left: 20px;
+      right: 20px;
+      width: calc(100% - 40px);
     }
     @include d(600){
       left: 15px;
